{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 31,
  "lineage": "64300022-d458-2884-7bb6-cd17bc2c31c8",
  "resources": [
    {
      "module": "module.terraform-aws-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "module.terraform-aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a261c0e5f51090b1",
            "arn": "arn:aws:ec2:eu-central-1:121440059180:instance/i-02f5ae13d21f4f1e9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mbition",
            "id": "i-02f5ae13d21f4f1e9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mbition",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c82a28c00db7eec6",
            "private_dns": "ip-10-0-1-159.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-35-158-83-114.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.158.83.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00517099c67e55aae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a08eea8c6bbf2e0",
            "tags": {
              "Name": "my-machine-0"
            },
            "tags_all": {
              "Name": "my-machine-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01839e02b10f6c91b"
            ]
          },
          "dependencies": [
            "module.terraform-aws-ec2.aws_security_group.sg",
            "module.terraform-aws-ec2.aws_subnet.subnet",
            "module.terraform-aws-ec2.aws_vpc.vpc",
            "module.terraform-aws-ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a261c0e5f51090b1",
            "arn": "arn:aws:ec2:eu-central-1:121440059180:instance/i-0361ac076f3991c61",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mbition",
            "id": "i-0361ac076f3991c61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mbition",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bb73e84ea77b97ba",
            "private_dns": "ip-10-0-2-22.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.22",
            "public_dns": "ec2-54-93-237-241.eu-central-1.compute.amazonaws.com",
            "public_ip": "54.93.237.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04b106df9fc0bbbe3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f604b050d4598a08",
            "tags": {
              "Name": "my-machine-1"
            },
            "tags_all": {
              "Name": "my-machine-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01839e02b10f6c91b"
            ]
          },
          "dependencies": [
            "module.terraform-aws-ec2.aws_security_group.sg",
            "module.terraform-aws-ec2.aws_subnet.subnet",
            "module.terraform-aws-ec2.aws_vpc.vpc",
            "module.terraform-aws-ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "module.terraform-aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:121440059180:internet-gateway/igw-0b961b91c0de6d9c9",
            "id": "igw-0b961b91c0de6d9c9",
            "owner_id": "121440059180",
            "tags": {
              "Name": "aws-ig-created-with-terraform"
            },
            "tags_all": {
              "Name": "aws-ig-created-with-terraform"
            },
            "vpc_id": "vpc-006fe52efd1b39ea1"
          },
          "dependencies": [
            "module.terraform-aws-ec2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "module.terraform-aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:121440059180:loadbalancer/app/backend-lb/b3d7bcdba87df0c1",
            "arn_suffix": "app/backend-lb/b3d7bcdba87df0c1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-lb-856394094.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:121440059180:loadbalancer/app/backend-lb/b3d7bcdba87df0c1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01839e02b10f6c91b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07a08eea8c6bbf2e0"
              },
              {
                "subnet_id": "subnet-0f604b050d4598a08"
              }
            ],
            "subnets": [
              "subnet-07a08eea8c6bbf2e0",
              "subnet-0f604b050d4598a08"
            ],
            "vpc_id": "vpc-006fe52efd1b39ea1",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.terraform-aws-ec2.aws_security_group.sg",
            "module.terraform-aws-ec2.aws_subnet.subnet",
            "module.terraform-aws-ec2.aws_vpc.vpc",
            "module.terraform-aws-ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "module.terraform-aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:121440059180:listener/app/backend-lb/b3d7bcdba87df0c1/ecd181f79925aa16",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:121440059180:targetgroup/backend-tg/59ac008ea66cd96b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:121440059180:listener/app/backend-lb/b3d7bcdba87df0c1/ecd181f79925aa16",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:121440059180:loadbalancer/app/backend-lb/b3d7bcdba87df0c1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-aws-ec2.aws_lb.alb",
            "module.terraform-aws-ec2.aws_lb_target_group.alb_target_group",
            "module.terraform-aws-ec2.aws_security_group.sg",
            "module.terraform-aws-ec2.aws_subnet.subnet",
            "module.terraform-aws-ec2.aws_vpc.vpc",
            "module.terraform-aws-ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "module.terraform-aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:121440059180:targetgroup/backend-tg/59ac008ea66cd96b",
            "arn_suffix": "targetgroup/backend-tg/59ac008ea66cd96b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 90,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:121440059180:targetgroup/backend-tg/59ac008ea66cd96b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-006fe52efd1b39ea1"
          },
          "dependencies": [
            "module.terraform-aws-ec2.aws_lb.alb",
            "module.terraform-aws-ec2.aws_security_group.sg",
            "module.terraform-aws-ec2.aws_subnet.subnet",
            "module.terraform-aws-ec2.aws_vpc.vpc",
            "module.terraform-aws-ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "one",
      "provider": "module.terraform-aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:121440059180:targetgroup/backend-tg/59ac008ea66cd96b-20230106231624049200000003",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:121440059180:targetgroup/backend-tg/59ac008ea66cd96b",
            "target_id": "10.0.1.159"
          },
          "dependencies": [
            "module.terraform-aws-ec2.aws_instance.instance",
            "module.terraform-aws-ec2.aws_lb.alb",
            "module.terraform-aws-ec2.aws_lb_target_group.alb_target_group",
            "module.terraform-aws-ec2.aws_security_group.sg",
            "module.terraform-aws-ec2.aws_subnet.subnet",
            "module.terraform-aws-ec2.aws_vpc.vpc",
            "module.terraform-aws-ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:121440059180:targetgroup/backend-tg/59ac008ea66cd96b-20230106231624103400000004",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:121440059180:targetgroup/backend-tg/59ac008ea66cd96b",
            "target_id": "10.0.2.22"
          },
          "dependencies": [
            "module.terraform-aws-ec2.aws_instance.instance",
            "module.terraform-aws-ec2.aws_lb.alb",
            "module.terraform-aws-ec2.aws_lb_target_group.alb_target_group",
            "module.terraform-aws-ec2.aws_security_group.sg",
            "module.terraform-aws-ec2.aws_subnet.subnet",
            "module.terraform-aws-ec2.aws_vpc.vpc",
            "module.terraform-aws-ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.terraform-aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:121440059180:route-table/rtb-019859634f84af2c3",
            "id": "rtb-019859634f84af2c3",
            "owner_id": "121440059180",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b961b91c0de6d9c9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-006fe52efd1b39ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-aws-ec2.aws_internet_gateway.ig",
            "module.terraform-aws-ec2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "module.terraform-aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a9696cdf83faa5d",
            "route_table_id": "rtb-019859634f84af2c3",
            "subnet_id": "subnet-07a08eea8c6bbf2e0"
          },
          "dependencies": [
            "module.terraform-aws-ec2.aws_route_table.rt",
            "module.terraform-aws-ec2.aws_subnet.subnet",
            "module.terraform-aws-ec2.aws_vpc.vpc",
            "module.terraform-aws-ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0484335bc16200719",
            "route_table_id": "rtb-019859634f84af2c3",
            "subnet_id": "subnet-0f604b050d4598a08"
          },
          "dependencies": [
            "module.terraform-aws-ec2.aws_route_table.rt",
            "module.terraform-aws-ec2.aws_subnet.subnet",
            "module.terraform-aws-ec2.aws_vpc.vpc",
            "module.terraform-aws-ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "module.terraform-aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:121440059180:security-group/sg-01839e02b10f6c91b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01839e02b10f6c91b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-created-with-terraform",
            "name_prefix": "",
            "owner_id": "121440059180",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-created-with-terraform"
            },
            "tags_all": {
              "Name": "SG-created-with-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-006fe52efd1b39ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-aws-ec2.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "module.terraform-aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:121440059180:subnet/subnet-07a08eea8c6bbf2e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a08eea8c6bbf2e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "121440059180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPN-created-with-terraform"
            },
            "tags_all": {
              "Name": "VPN-created-with-terraform"
            },
            "vpc_id": "vpc-006fe52efd1b39ea1"
          },
          "dependencies": [
            "module.terraform-aws-ec2.aws_vpc.vpc",
            "module.terraform-aws-ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:121440059180:subnet/subnet-0f604b050d4598a08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f604b050d4598a08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "121440059180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPN-created-with-terraform"
            },
            "tags_all": {
              "Name": "VPN-created-with-terraform"
            },
            "vpc_id": "vpc-006fe52efd1b39ea1"
          },
          "dependencies": [
            "module.terraform-aws-ec2.aws_vpc.vpc",
            "module.terraform-aws-ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-aws-ec2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.terraform-aws-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:121440059180:vpc/vpc-006fe52efd1b39ea1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b78fc74301a3e25",
            "default_route_table_id": "rtb-023060434bc6669ad",
            "default_security_group_id": "sg-0f48ccfa65a7a6ed8",
            "dhcp_options_id": "dopt-052ccd8100899939d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006fe52efd1b39ea1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023060434bc6669ad",
            "owner_id": "121440059180",
            "tags": {
              "Name": "VPC-created-with-terraform"
            },
            "tags_all": {
              "Name": "VPC-created-with-terraform"
            }
          }
        }
      ]
    }
  ]
}